# aoe

./: .gitignore  .gitmodules  BUGS  BUGS.md  CMakeLists.txt  CODINGSTYLE.md  HACKING  HACKING.md  INSTALL  LEGAL  LICENSE.simple  Makefile  README  README.md  STATUS  STATUS.md  addenda_et_corrigenda  bmp.c  build  comm.h  config.c  config.h  configure  copying.md  dbg  dbg.c  dbg.h  dmap.c  dmap.h  empx.c  engine.c  engine.h  game.c  game.h  game_set.h  gfx.c  gfx.h  langx.c  langx.h  log.c  (+14 more)
.github/workflows/: test_distros.yml  unit_test.yml
doc/: .gitignore  Doxyfile  Makefile  cheats  cheats.md  drs  genie  genie.md  log.md  palette  pe  tools  user_guide.md  via.tex
doc/images/: .gitignore
doc/reverse_engineering/: api  civilizations.md  drs  menu  scn  slp
empires/: .gitignore  Makefile  cfg.h  cpn.c  cpn.h  drs.c  drs.h  editor.cpp  editor.hpp  empires.c  errno.h  fs.c  fs.h  fs.hpp  game.cpp  game.hpp  genie.h  gfx.c  gfx.h  image.hpp  inflate.cpp  lang.h  math.h  qtree.cpp  render.hpp  res.h  scenario.cpp  scenario.hpp  scn.c  scn.h  sfx.cpp  sfx.h  str.c  str.h  ui.cpp  ui.h  world.hpp
empiresx/: .gitignore  CMakeLists.txt  INSTALL  Makefile  audio.cpp  audio.hpp  base.hpp  cfg.hpp  drs.cpp  drs.hpp  empiresx.c  empiresx.cpp  endian.h  engine.cpp  engine.hpp  font.cpp  font.hpp  fs.cpp  fs.hpp  game.cpp  game.hpp  lang.hpp  menu.cpp  menu.hpp  mouse.cpp  mouse.hpp  net.cpp  net.hpp  os.cpp  os.hpp  os_macros.hpp  pe.cpp  pe.hpp  render.cpp  render.hpp  string.hpp  taunts.cpp  ui.cpp  ui.hpp
empiresx/base/: dbg.h  drs.hpp  game.cpp  game.hpp  geom.hpp  math.hpp  net.cpp  net.hpp  random.hpp  types.hpp  world.cpp  world.hpp
empiresx/cmake/: sdl2-config.cmake  sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
empiresx/linux/: net.cpp
empiresx/server/: server.cpp
empiresx/windows/: net.cpp
game/: CMakeLists.txt  aoe.c  bkg.c  bkg.h  cheat.c  cheat.h  comm.c  comm.h  config.c  config.h  configure  empx.c  empx.h  engine.c  engine.h  game.c  game.h  game_set.h  gfx.h  lang.h  langx.c  langx.h  log.c  main.cpp  map.h  menu.h  server.cpp  sfx.c  ui.h  view.h
game/obsolete/: bkg.c  bkg.h  cheat.c  config.h  empx.c  empx.h  engine.c  engine.h  game.c  game.h  gfx.c  langx.c  log.h  map.c  menu.c  sfx.c  sfx.h  ui.c
game/src/: async.hpp  debug.cpp  debug.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  gl3w.c  idpool.hpp  imgui.cpp  imgui_user.hpp  legacy.hpp  net.cpp  net.hpp  nominmax.hpp  os.cpp  os.hpp  protocol.cpp  sdl.cpp  sdl.hpp  server.cpp  server.hpp  string.hpp  time.h  ui.cpp  ui.hpp
game/src/core/: ci_file.h  except.hpp  idpool.hpp  mblk.h  minmax.hpp  string.hpp
game/src/engine/: assets.cpp  assets.hpp  async.cpp  audio.cpp  audio.hpp  ci_file.c  config.cpp  endian.h  engine_view.cpp  file_io.cpp  file_io.hpp  font.cpp  font.hpp  gfx.cpp  gfx.hpp  gl.hpp  grid.hpp  ini.cpp  ini.hpp  keyboard_mode.hpp  keyctl.cpp  keyctl.hpp  legacy.cpp  mblk.c  menu.cpp  menu.hpp  pack.cpp  sdl.cpp  sdl.hpp  texbuild.cpp  tileset.cpp
game/src/engine/views/: client.cpp  engine_view.cpp
game/src/legacy/: background.cpp  drs.cpp  lang.cpp  legacy.cpp  legacy.hpp  limits.hpp  palette.cpp  pe.cpp  scenario.cpp  scenario.hpp  slp.cpp  strings.hpp  wave.cpp
game/src/net/: client.cpp  clientinfo.hpp  net.cpp  net.hpp  netpkg.hpp  netrw.cpp  protocol.cpp  protocol.hpp  server.cpp
game/src/net/client/: cam_ctl.cpp  entity_ctl.cpp  particle_mod.cpp  resource_ctl.cpp
game/src/net/protocol/: cam_mod.cpp  chat.cpp  clientinfo.cpp  entity_mod.cpp  gameover.cpp  gamespeed_mod.cpp  gameticks.cpp  particle_mod.cpp  peer_mod.cpp  player_mod.cpp  protocol_mod.cpp  resource_mod.cpp  scenario_settings.cpp  terrain_mod.cpp  username.cpp
game/src/net/server/: clientinfo_ctl.cpp  entity_ctl.cpp  player_ctl.cpp
game/src/shaders/: shader.fs  shader.vs
game/src/ui/: align.hpp  cache.cpp  entities.cpp  fullscreenmenu.cpp  fullscreenmenu.hpp  game.cpp  hud.cpp  imgui.cpp  imgui_user.hpp  layout_groups.cpp  menu.cpp  menubar.cpp  menubutton.cpp  menulabel.cpp  scenario_convert.cpp  scenario_editor.cpp
game/src/ui/widgets/: achievements.cpp  lobby.cpp  scenario_settings.cpp
game/src/world/: buildings.hpp  entity.cpp  entity.hpp  entity_info.cpp  entity_info.hpp  entity_task.cpp  particle.cpp  particle.hpp  player.cpp  resources.hpp  scenario_settings.cpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp
game/src/world/game/: game_settings.cpp  game_settings.hpp
game/src/world/tgen/: flat.cpp  neighbors.cpp  normal.cpp  tiles.cpp
game/tests/: main.cpp  net.cpp  protocol.cpp  sdl.cpp  server.cpp  util.cpp  util.hpp
genie/: .gitignore  Makefile  bkg.h  cdrom.c  cdrom.h  configure  crash.c  crash.h  dbg.c  dbg.h  def.c  dmap.c  dmap.h  drs.c  drs.h  endian.h  engine.c  engine.h  fnt_data.h  fs.c  fshape.h  game.c  game.h  genie.c  gfx.c  gfx.h  memmap.c  memmap.h  memory.c  menu.c  menu.h  pe.c  pe.h  prompt.c  prompt.h  res.c  rsrc.c  rsrc.h  sfx.c  sfx.cpp  (+23 more)
include/genie/: bmp.h  cfg.h  dbg.h  def.h  drs.h  engine.h  genie.h  gfx.h  memory.h  res.h  sfx.h
reverse_engineering/: .gitignore  Makefile  README  aoe.c  configure  cpu.h  dbg.h  font.c  menu.c  regedit.c  rp.c  run_aoe.sh  run_setup.sh  setup.c  setup.rc  setupinfo.S  win.c
server/: .gitignore  Makefile  client.c  common.h  net.c  server.c
setup/: Makefile  bmp.c  bmp.h  dbg.h  def.c  def.h  res.c  res.h  setup.c
src/: audio.cpp  audio.hpp  bkg.h  build  cheat.c  cheat.h  comm.c  comm.h  config.c  config.h  configure  dmap.c  dmap.h  drs.cpp  drs.hpp  empiresx.cpp  empx.c  engine.c  engine.cpp  engine.h  engine.hpp  fs.cpp  fs.hpp  game.c  game.h  game_set.h  geom.cpp  geom.hpp  gfx.c  gfx.h  graphics.cpp  graphics.hpp  inflate.cpp  lang.cpp  lang.h  lang.hpp  langx.c  langx.h  log.c  log.h  (+30 more)
tools/: .gitignore  LICENSE  Makefile  README.md  build  cheat.c  configure  convert.c  cpn.c  drs.c  drs.py  dview.c  palette.py  pedump.c  pestat.c  png_test.c  ref.py  rsrc.c  scn.c  serialization.h  slp.c  slp.py  str.c  wave.c  xmap.c  xmap.h
vmem/: build  memtest.c
(+66 files in other folders)
